# miga

./: .gitignore  .gitmodules  LLM.md  README.md
.github/workflows/: deploy-foundation.yml  deploy-protocol.yml  test-token.yml
bridge/: README.md  package.json
bridge/src/: chains.ts  client.ts  constants.ts  index.ts  types.ts  wormhole.ts
contracts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
contracts/idl/: miga.json
contracts/sdk/: client.ts  index.ts
contracts/src/: index.ts
contracts/types/: index.ts
dao/: README.md  foundry.toml  package.json
dao/contracts/: DaoVault.sol  MigaToken.sol  ParsToken.sol  VePars.sol
foundation/: index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
foundation/src/: App.tsx  index.css
pips/: CNAME  README.md  _config.yml  index.md
pips/PIPs/: pip-0000-protocol-architecture.md  pip-0001-constitution.md  pip-0002-quadratic-timelock-voting.md  pip-0003-paired-lock-governance.md  pip-0004-techno-capital-grants.md  pip-0005-strategic-execution.md  pip-0006-token-economics.md  pip-0007-privacy-preserving-governance.md  pip-0008-ten-dao-governance.md  pip-0009-supreme-council.md  pip-0010-amn-security-dao.md  pip-0011-khaz-treasury-dao.md  pip-0012-miz-impact-dao.md  pip-0013-dad-governance-protocol-dao.md  pip-0014-sal-health-dao.md  pip-0015-farh-culture-dao.md  pip-0016-dan-research-dao.md  (+8 more)
protocol/: pnpm-lock.yaml
token/: Anchor.toml  package.json
token/programs/miga/: Cargo.toml
token/programs/miga/src/: lib.rs
whitepaper/: MIGA-Whitepaper.md  main.tex  preamble.tex
(+35 files in other folders)
